--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,4 +8,5 @@
   win_unzip:
     src: C:\Users\{{ ansible_user }}\Downloads\vs-code.zip
     dest: C:\Users\{{ ansible_user }}\Downloads\vs-code
+    delete_archive: yes
     creates: C:\Users\{{ ansible_user }}\Downloads\vs-code
